--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>DCC202 - Atividade 9: Leticia Quintao Costa</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 9: Leticia Quintao Costa</h1>
+        <p>Esta é a página principal tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
+    </main>
 </body>
 </html>
