--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
         <h1>DCC202 - Atividade 9: Leticia Quintao Costa</h1>
         <p>Esta é a página principal tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
     </main>
+    <script>
+        let maria = 1;
+        let joao = 2;
+    </script>
 </body>
 </html>
